changing API from renamed to added, deleted, renamed
